Bug of overflow

--- a/css.css
+++ b/css.css
@@ -224,6 +224,7 @@ width: 100%;
 padding: 20px 5px 20px 5px;
 }
 main #table, #table-global{
+width:100%;
 margin: 10px 2px 10px 2px;
 overflow: auto;
 }
